making background colors less obtrustive

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1>Grade Sheet</h1>
         <div class="container-fluid" ng-controller="GradeSheetCtrl">
             <div class="row">
-                <div class="col-xs-12 col-md-7" style="background-color: green;">
+                <div class="col-xs-12 col-md-7" style="background-color: AliceBlue;">
                     <h3>Student Grades<h3>
                     <table class="table">
                         <tr ng-repeat="($index, entry) in entries">
@@ -52,7 +52,7 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-xs-12 col-md-5" style="background-color: blue;">
+                <div class="col-xs-12 col-md-5" style="background-color: LemonChiffon;">
                     <h3>Summary</h3>
                     <table class="table">
                         <tr>
