--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 }
             ]);
         </script>
-        <style>
+        <style type="text/css">
+            input:focus { border: 2px solid green; }
             .failing { border: 2px solid red; }
         </style>
         <link rel="stylesheet" href="lib/bootstrap-3.3.5-dist/css/bootstrap.css"></link>
