tweaking bootstrap columns to only stack in xs, not sm

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1>Grade Sheet</h1>
         <div class="container-fluid" ng-controller="GradeSheetCtrl">
             <div class="row">
-                <div class="col-xs-12 col-md-7" style="background-color: AliceBlue;">
+                <div class="col-xs-12 col-sm-7 col-md-7" style="background-color: AliceBlue;">
                     <h3>Student Grades<h3>
                     <table class="table">
                         <tr class="column-label">
@@ -90,7 +90,7 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-xs-12 col-md-5" style="background-color: LemonChiffon;">
+                <div class="col-xs-12 col-sm-5 col-md-5" style="background-color: LemonChiffon;">
                     <h3>Summary</h3>
                     <table class="table">
                         <tr>
