--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <script src="lib/angular.js"></script>
-        <script src="lib/lodash.js"></script>
-        <script src="lib/angular-local-storage.js"></script>
+        <script src="js/angular.js"></script>
+        <script src="js/angular-local-storage.js"></script>
+        <script src="js/lodash.js"></script>
         <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
         <script>
             var myApp = angular.module('myApp', ['LocalStorageModule']);
@@ -76,7 +76,7 @@
                 }
             });
         </script>
-        <link rel="stylesheet" href="lib/bootstrap-3.3.5-dist/css/bootstrap.css"></link>
+        <link rel="stylesheet" href="css/bootstrap.css"></link>
         <style type="text/css">
             input { height: 34px; }
             input:focus { border: 2px solid green; }
