focusing the name input after a new entry is created, vastly simplifying data entry

--- a/index.html
+++ b/index.html
@@ -37,9 +37,19 @@
                         </tr>
                         <tr ng-controller="NewEntryCtrl">
                             <td class="row-label">New:</td>
-                            <td><input ng-model="newEntry.name" type="text" ng-keyup="$event.keyCode == 13 && create()"></input></td>
-                            <td><input ng-model="newEntry.grade" type="number" ng-keyup="$event.keyCode == 13 && create()"></input></td>
-                            <td><button class="btn" ng-click="create()">create</button></td>
+                            <td>
+                                <input id="thingy"
+                                       ng-model="newEntry.name"
+                                       type="text"
+                                       ng-keyup="$event.keyCode == 13 && create()">
+                                </input>
+                            </td>
+                            <td>
+                                <input ng-model="newEntry.grade"
+                                       type="number"
+                                       ng-keyup="$event.keyCode == 13 && create()">
+                                </input>
+                            </td>
                         </tr>
                     </table>
                 </div>
