--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             .table { width: auto; }
             .table > tbody > tr > td { border: 1px solid #EEE; padding: 0px; height: 30px; }
             .table > button { height: 30px; padding: 0px; }
-            .column-label > td, .row-label { text-align: center; background: #EEE; }
+            .column-label > td, .row-label { text-align: center; background: #EEE; width: 30px; }
             .failing { border: 2px solid red; }
             .delete-button { width: 100%; height: 32px; margin: 1px 0px; background-color: transparent; }
         </style>
@@ -36,7 +36,7 @@
                             <td><button class="btn delete-button" ng-click="delete($index)"><span class="glyphicon glyphicon-remove"</button></td>
                         </tr>
                         <tr ng-controller="NewEntryCtrl">
-                            <td class="row-label">New:</td>
+                            <td class="row-label"></td>
                             <td>
                                 <input id="thingy"
                                        ng-model="newEntry.name"
