--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container-fluid" ng-controller="GradeSheetCtrl">
             <div class="row">
                 <div class="col-xs-12 col-sm-7 col-md-7" style="background-color: AliceBlue;">
-                    <h3>Student Grades<h3>
+                    <h3>Student Grades</h3>
                     <table class="table">
                         <tr class="column-label">
                             <td ng-repeat="label in columnLabels"><label>{{label}}</label></td>
