--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             input:focus { border: 2px solid green; }
             input[type="text"] { width: 300px; }
             input[type="number"] { width: 75px; }
+            label { margin-bottom: 0px; }
             .table { width: auto; background: #EEE; }
             .table > tbody > tr > td { border: 1px solid #EEE; padding: 0px; height: 30px; }
             .table > button { height: 30px; padding: 0px; }
@@ -19,6 +20,7 @@
             .summary-row-value { text-align: center; width: 68px; }
             .failing { border: 2px solid red; }
             .delete-button { width: 100%; height: 32px; margin: 1px 0px; background-color: transparent; }
+            .full-width { width: 100%; }
         </style>
     </head>
     <body ng-app="gradeSheet">
@@ -29,10 +31,14 @@
                     <h3>Student Grades</h3>
                     <table class="table">
                         <tr class="column-label">
-                            <td ng-repeat="label in columnLabels"><label>{{label}}</label></td>
+                            <td ng-repeat="label in columnLabels">
+                                <centered><label>{{label}}</label></centered>
+                            </td>
                         </tr>
                         <tr ng-repeat="($index, entry) in entries">
-                            <td class="row-label">{{$index + 1}}</td>
+                            <td class="row-label">
+                                <centered>{{$index + 1}}</centered>
+                            </td>
                             <td>
                                 <input ng-model="entry.name"
                                        ng-model-options="{ updateOn: 'change blur' }"
@@ -70,8 +76,8 @@
                     <h3>Summary</h3>
                     <table class="table" ng-controller="SummaryCtrl">
                         <tr ng-repeat="summaryRow in summaryRows">
-                            <td class="summary-row-label"><label>{{ summaryRow.label }}</label></td>
-                            <td class="summary-row-value">{{ summaryRow.valueFunction(entries) | number:2 }}</td>
+                            <td class="summary-row-label"><centered class="full-width"><label>{{ summaryRow.label }}</label></centered></td>
+                            <td class="summary-row-value"><centered>{{ summaryRow.valueFunction(entries) | number:2 }}</centered></td>
                         </tr>
                     </table>
                 </div>
