--- a/index.html
+++ b/index.html
@@ -6,22 +6,7 @@
         <script src="js/grade-sheet.js"></script>
         <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
         <link rel="stylesheet" href="css/bootstrap.css"></link>
-        <style type="text/css">
-            input { height: 34px; }
-            input:focus { border: 2px solid green; }
-            input[type="text"] { width: 300px; }
-            input[type="number"] { width: 75px; }
-            label { margin-bottom: 0px; }
-            .table { width: auto; background: #EEE; }
-            .table > tbody > tr > td { border: 1px solid #EEE; padding: 0px; height: 30px; }
-            .table > button { height: 30px; padding: 0px; }
-            .column-label > td, .row-label { text-align: center; width: 30px; }
-            .summary-row-label { text-align: right; width: 90px; }
-            .summary-row-value { text-align: center; width: 68px; }
-            .failing { border: 2px solid red; }
-            .delete-button { width: 100%; height: 32px; margin: 1px 0px; background-color: transparent; }
-            .full-width { width: 100%; }
-        </style>
+        <link rel="stylesheet" href="css/grade-sheet.css"></link>
     </head>
     <body ng-app="gradeSheet">
         <h1>Grade Sheet</h1>
@@ -36,9 +21,7 @@
                             </td>
                         </tr>
                         <tr ng-repeat="($index, entry) in entries">
-                            <td class="row-label">
-                                <centered>{{$index + 1}}</centered>
-                            </td>
+                            <td class="row-label"><centered>{{$index + 1}}</centered></td>
                             <td>
                                 <input ng-model="entry.name"
                                        ng-model-options="{ updateOn: 'change blur' }"
@@ -52,7 +35,7 @@
                                        type="number"
                                        ng-class="{failing: entry.grade < 65}">
                             </td>
-                            <td><button class="btn delete-button" ng-click="delete($index)"><span class="glyphicon glyphicon-remove"</button></td>
+                            <td><button class="btn delete-button" ng-click="delete($index)"><span class="glyphicon glyphicon-remove"></button></td>
                         </tr>
                         <tr ng-controller="NewEntryCtrl">
                             <td class="row-label"></td>
