converting last css styling to proper classes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Grade Sheet</h1>
         <div class="container-fluid" ng-controller="GradeSheetCtrl">
             <div class="row">
-                <div class="col-xs-12 col-sm-7 col-md-7" style="background-color: AliceBlue;">
+                <div class="col-xs-12 col-sm-8 col-md-8 alice-blue">
                     <h3>Student Grades</h3>
                     <table class="table">
                         <tr class="column-label">
@@ -53,8 +53,7 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-xs-12 col-sm-5 col-md-5"
-                     style="background-color: LemonChiffon;"
+                <div class="col-xs-12 col-sm-4 col-md-4 lemon-chiffon"
                      ng-show="entries.length >= 1">
                     <h3>Summary</h3>
                     <table class="table" ng-controller="SummaryCtrl">
